--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
     
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Sobre</h2>
-            <p>TODO</p>
+            <p>Profissional  da área administrativa em Transição de Carreira para área de TI.  Atuei na área de TI nas décadas de 90 e início de 2000, como programador e analista de software, Delphi 4, Dataflex, Clipper, Basic e Suporte ao Usuário. 
+              Atualmente estou fazendo faculdade de Análise e Desenvolvimento de Sistemas e possuo cursos na área de TI nas seguintes stacks: Html5, CSS, JavaScript, Type Script, Angular, .Net com C#, Python, Git, GitHub, Figma, participei e finalizei: BootCamp Geração Tech Unimed-BH Fullstack e BootCamp Pottencial  .Net Developer pela plataforma DIO - Digital Innovation One, no ano de 2022.
+              Sou apaixonado por Tecnologia , desenvolvimento de sistemas e de desafios tecnológicos.</p>
           </div>
 
           <div class="w3-container w3-card w3-white w3-margin-bottom">
@@ -98,15 +100,10 @@
               <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Experiências
             </h2>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
-              <p>TODO</p>
+              <h5 class="w3-opacity"><b>Mineirin Quitutes de Minas</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Setembro/2021 - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
+              <p>Estagiário em Desenvolvimento de Sistemas</p>
               <hr>
-            </div>
-            <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - FIM</h6>
-              <p>TODO</p>
             </div>
           </div>
   
@@ -123,16 +120,17 @@
                 de ensino imersivas e com foco em empregabilidade. Nesse contexto, seguem meus principais certificados:
               </p>
               <ul>
-                <li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li>
-                <li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li>
-                <li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li>
+                <li><a href="https://www.dio.me/certificate/6AB6B8E4" target="_blank">BootCamp: Geração Tech Unimed-BH | Fullstack (127 horas)</a></li>
+                <li><a href="https://www.dio.me/certificate/0BAED2C4" target="_blank">BootCamp: Pottencial .NET Developer (96 horas)</a></li>
+                <li><a href="https://www.dio.me/certificate/73F25E80" target="_blank">
+                  Formação: JavaScript Developer (37 horas)</a></li>
               </ul>
               <hr>
             </div>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - FIM</h6>
-              <p>TODO</p>
+              <h5 class="w3-opacity"><b>Faculdade Insted</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Julho-2022 - Dezembro-2024</h6>
+              <p>Tecnólogo em Análise e Desenvolvimento de Sistemas (2º Semestre)</p>
             </div>
           </div>
 
