Atualização Lado Esquerdo

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             </h2>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Digital Innovation One (DIO)</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Abil-2022- <span class="w3-tag w3-teal w3-round">Atual</span></h6>
               <p>
                 Maior plataforma de educação aberta em TI da América Latina, com mais 1 milhão de usuários. 
                 A DIO possui parcerias com algumas das empresas mais inovadoras do mundo, proporcionando experiências 
@@ -123,7 +123,7 @@
                 <li><a href="https://www.dio.me/certificate/6AB6B8E4" target="_blank">BootCamp: Geração Tech Unimed-BH | Fullstack (127 horas)</a></li>
                 <li><a href="https://www.dio.me/certificate/0BAED2C4" target="_blank">BootCamp: Pottencial .NET Developer (96 horas)</a></li>
                 <li><a href="https://www.dio.me/certificate/73F25E80" target="_blank">
-                  Formação: JavaScript Developer (37 horas)</a></li>
+                  Formação: JavaScript Developer (39 horas)</a></li>
               </ul>
               <hr>
             </div>
